# stup-engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  readme.md  run.sh
StupEngine/assets/: basicShader.fs  basicShader.vs
StupEngine/src/: Application.cpp  Application.h  main.cpp  run.sh  stuppch.cpp  stuppch.h
StupEngine/src/Engine/Core/: ApplicationEvent.h  Event.h  Input.cpp  Input.h  KeyCodes.h  KeyEvent.h  Layer.cpp  Layer.h
StupEngine/src/Engine/GameObjects/: GameObject.cpp  GameObject.h  Scene.cpp  Scene.h
StupEngine/src/Engine/GameObjects/Components/: Component.cpp  Component.h  Rigidbody.cpp  Rigidbody.h  Sprite.cpp  Sprite.h  Transform.cpp  Transform.h
StupEngine/src/Engine/Renderer/: Framebuffer.cpp  Framebuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Window.cpp  Window.h
